# ServerlessProjects

./: README.md
Labs/Lab01/: E7.py  E8.py  main.py
Labs/Lab01/Data/: graphE0.xlsx  graphE7.xlsx  graphE8.xlsx
Labs/Lab01/E0/: main.py
Labs/Lab01/E4/: main.py  requirements.txt
Labs/Lab01/E7/: main.py  requirements.txt
Labs/Lab02/backend/: main.py  requirements.txt
Labs/Lab02/frontend/: main.py  requirements.txt
Labs/Lab02/frontend/templates/: form.html  form_submitted.html  index.html
Labs/Lab02/overview/: envs.bat  main.py
Labs/Lab02/overview/templates/: form.html  form_submitted.html
Labs/Lab02/statistics/: Example.java  key.json  pom.xml
Labs/Lab03/: observation.md  observations.txt
Labs/Lab03/Dummyfunctions/: Dummy00.py  Dummy01.py  Dummy02.py  Dummy03.py  Dummy04.py  dummy00.py
Labs/Lab03/workflow-manager/: main.py  requirements.txt  test.py
Labs/Lab04/faasification/: R5_Errortext
Labs/Lab04/ping/: pingit.py
Labs/Lab04/trigger/: main.py  requirements.txt
Labs/Lab04/trigger/templates/: base.html  form.html
Labs/Lab04/workflow/: workflow.yaml
Labs/Lab05/: E5_Code.py
Labs/Lab05/display_blogs/: Dockerfile  app.py
Labs/Lab05/display_blogs/templates/: form_submitted.html
Labs/Lab05/long-rocket/: Cargo.toml  Dockerfile
Labs/Lab05/long-rocket/src/: main.rs
Labs/Lab05/long-rocket/templates/: form.html  form_submitted.html  macro.html.tera
Labs/Lab05/submit/: .dockerignore  Dockerfile  app.py  requirements.txt  run.sh
Labs/Lab05/submit/templates/: base.html  form.html
Labs/Lab06/: api.raml  s.yaml
Labs/Lab06/myServices/: .gitignore  Dependencies.toml  main.bal
Labs/Lab07/: docker-compose.yml
Labs/Lab07/Kubernetes/: br0-networkpolicy.yaml  db-deployment.yaml  db-service.yaml  frontend-deployment.yaml  frontend-service.yaml
Labs/Lab07/Kubernetes/k8s-first-deployment/: wordpress-deployment.yaml  wordpress-ingress.yaml
Labs/Lab07/display_blogs/: Dockerfile  app.py  requirements.txt
Labs/Lab07/display_blogs/templates/: index.html
Labs/Lab07/docker-compose/: docker-compose.yml
Labs/Lab07/long-rocket/: .env  Cargo.toml  Dockerfile  sql.db  sqlx-data.json
Labs/Lab07/long-rocket/db/: sql.db
Labs/Lab07/long-rocket/migrations/: 20211118151621_base.sql
Labs/Lab07/long-rocket/src/: main.rs
Labs/Lab08/: README.md
Labs/Lab08/Video/: Drehbuch SCAD ProLoc.docx
Labs/Lab08/cloud functions/: .firebaserc  README.md
Labs/Lab08/cloud functions/functions/: index.js
Labs/Lab08/flutter_app/: README.md  pubspec.yaml
Labs/Lab08/flutter_app/lib/: data_point_controller.dart  data_points_model.dart  main.dart
Labs/Lab08/flutter_app/test/: widget_test.dart
Labs/Lab08/imgs/: architecture_diagram.drawio
Labs/Lab08/webhook/: Cargo.toml  Dockerfile  README.md
Labs/Lab08/webhook/src/: db.rs  healthcheck.rs  logger.rs  main.rs  model.rs  routes.rs  stats_storage.rs  storage.rs  timestamp.rs
backend/: main.py  requirements.txt
