[package]
name = "long-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
rocket = { version = "0.5.0-rc.1", features = [ "json" ], default-features = false }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = [ "sqlite_pool" ], default-features = false }

