[package]
name = "long-rocket"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = [ "json" ], default-features = false }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = [ "sqlx_sqlite" ], default-features = false }
sqlx =  { version = "0.5", default-features = false, features = ["macros", "offline", "migrate"] }

[profile.release]
lto = true
codegen-units = 1
