[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.15"
serde = "1"
chrono = { version = "0.4", features = [ "serde" ] }
cfg-if = "1.0"
futures = "0.3"
tokio = "1.15"
once_cell = "1.9"
parking_lot = "0.11"
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4"
mime = "0.3"

[features]

[profile.release]
lto = true
codegen-units = 1
