[package]
name = "webhook"
version = "0.1.6"
edition = "2021"
authors = [ "Adrian Hornung", "SCAD-CLUELESS" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.18"
serde = { version = "1", features = [ "rc" ] }
time = { version = "0.3", default-features= false, features = ["std", "serde", "parsing"] }
cfg-if = "1.0"
futures = "0.3"
tokio = { version =  "1.15", default-features = false }
parking_lot = "0.11"
serde_json = "1"
log = "0.4"
env_logger="0.9"
mime = "0.3"
reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
anyhow = "1.0"
clap = { version = "3.0.0-rc.9", default-features = false, features = [ "derive", "std" ]}

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"


[features]

[profile.release]
lto = true
codegen-units = 1
